# vectorgraph

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml  schema.sql
examples/: demo.py
tests/: conftest.py  test_db.py  test_graph.py  test_vector.py
vectorgraph/: __init__.py  cli.py  db.py  graph.py  mcp_server.py  sync.py  vector.py
vectorgraph/examples/: demo.py
